--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,3 +7,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+.my-font {
+  font-family: Arial, Helvetica, sans-serif;
+}
